--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <img src="./images/icon-hamburger.svg" class="burger"/>
     <div class="logo">
-      <img src="/images/logo.svg"/>
+      <img src="./images/logo.svg"/>
     </div>
     <ul class="nav-links">
       <li><a href="#">home</a></li>
